--- a/docs/src/gcode/g-code.adoc
+++ b/docs/src/gcode/g-code.adoc
@@ -1539,8 +1539,10 @@ G52 axes
 ----
 
 G52 is used in a part program as a temporary "local coordinate system
-offset" within the workpiece coordinate system. More information on G52
-is in the <<gcode:g52,Local and Global Offsets>> section.
+offset" within the workpiece coordinate system. For more information about
+`G92` and `G52` and how they interact see the 
+<<cha:coordinate-systems#local-and-global-offsets,Local and Global Offsets>>
+section.
 
 [[gcode:g53]]
 == G53 Move in Machine Coordinates(((G53 Machine Coordinates)))
