#3565: This shouldn't be any different to the current content. But it works on my local machine.

--- a/docs/src/gcode/g-code.adoc
+++ b/docs/src/gcode/g-code.adoc
@@ -1541,8 +1541,7 @@ G52 axes
 G52 is used in a part program as a temporary "local coordinate system
 offset" within the workpiece coordinate system. For more information about
 `G92` and `G52` and how they interact see the 
-<<sec:g52-and-g92-offsets,Local and Global Offsets>>
-section.
+<<sec:g52-and-g92-offsets,Local and Global Offsets>> section.
 
 [[gcode:g53]]
 == G53 Move in Machine Coordinates(((G53 Machine Coordinates)))
