--- a/docs/src/gcode/g-code.adoc
+++ b/docs/src/gcode/g-code.adoc
@@ -1540,8 +1540,8 @@ G52 axes
 
 G52 is used in a part program as a temporary "local coordinate system
 offset" within the workpiece coordinate system. For more information about
-`G92` and `G52` and how they interact see the 
-<<sec:g52-and-g92-offsets,Local and Global Offsets>> section.
+`G92` and `G52` and how they interact see the
+<<gcode:g52,Local and Global Offsets>> section.
 
 [[gcode:g53]]
 == G53 Move in Machine Coordinates(((G53 Machine Coordinates)))
