--- a/docs/src/config/core-components.adoc
+++ b/docs/src/config/core-components.adoc
@@ -95,8 +95,7 @@ unlock_joints_mask=0x38 selects joints 3,4,5
 [[sec:motion-pins]]
 === Pins(((motion:HAL pins)))
 
-These pins, parameters, and functions are created by the realtime 'motmod'
-module.
+These pins, parameters, and functions are created by the realtime 'motmod' module.
 
 * 'motion.adaptive-feed' - (float, in) When adaptive feed is enabled with 'M52 P1' , the
   commanded velocity is multiplied by this value. This effect is
@@ -109,13 +108,10 @@ module.
   controlled by M67 or M68.
 * 'motion.coord-error' - (bit, out) TRUE when motion has encountered an error, such as
   exceeding a soft limit
-* 'motion.coord-mode' - (bit, out) TRUE when motion is in 'coordinated mode', as opposed to
-  'teleop mode'
+* 'motion.coord-mode' - (bit, out) TRUE when motion is in 'coordinated mode', as opposed to 'teleop mode'
 * 'motion.current-vel' - (float, out) The current tool velocity in user units per second.
-* 'motion.digital-in-00' - (bit, in) These pins (00, 01, 02, 03 or more if configured) are
-  controlled by M62-65.
-* 'motion.digital-out-00' - (bit, out) These pins (00, 01, 02, 03 or more if configured) are
-  controlled by the 'M62-65'.
+* 'motion.digital-in-00' - (bit, in) These pins (00, 01, 02, 03 or more if configured) are controlled by M62-65.
+* 'motion.digital-out-00' - (bit, out) These pins (00, 01, 02, 03 or more if configured) are controlled by the 'M62-65'.
 * 'motion.distance-to-go' - (float,out) The distance remaining in the current move.
 * 'motion.enable' - (bit, in) If this bit is driven FALSE, motion stops, the machine is
   placed in the 'machine off' state, and a message is displayed for the
@@ -147,32 +143,18 @@ module.
 * 'motion.teleop-mode' - (bit, out) TRUE when motion is in 'teleop mode', as opposed to 'coordinated mode'
 * 'motion.tooloffset.x ... motion.tooloffset.w' - (float, out, one per axis) shows the tool offset in effect;
   it could come from the tool table ('G43' active), or it could come from the G-code ('G43.1' active)
-
-* 'motion.on-soft-limit' -
-  (bit, out) TRUE when the machine is on a soft limit.
-* 'motion.probe-input' -
-  (bit, in) 'G38.n'  uses the value on this pin to determine when the
-  probe has made contact.
+* 'motion.on-soft-limit' - (bit, out) TRUE when the machine is on a soft limit.
+* 'motion.probe-input' - (bit, in) 'G38.n'  uses the value on this pin to determine when the probe has made contact.
   TRUE for probe contact closed (touching),
   FALSE for probe contact open.
-* 'motion.program-line' -
-  (s32, out) The current program line while executing. Zero if not
-  running or between lines while single stepping.
-* 'motion.requested-vel' -
-  (float, out) The current requested velocity in user units per
-  second.  This value is the F-word setting from the G-code file,
-  possibly reduced to accommodate machine velocity and acceleration
-  limits. The value on this pin does not reflect the feed override or
-  any other adjustments.
-
-* 'motion.teleop-mode' -
-  (bit, out) TRUE when motion is in 'teleop mode', as opposed to
-  'coordinated mode'
-
-* 'motion.tooloffset.x ... motion.tooloffset.w' -
-  (float, out, one per axis) shows the tool offset in effect;
-  it could come from the tool table ('G43' active), or it could
-  come from the G-code ('G43.1' active)
+* 'motion.program-line' - (s32, out) The current program line while executing.
+  Zero if not running or between lines while single stepping.
+* 'motion.requested-vel' - (float, out) The current requested velocity in user units per second.
+  This value is the F-word setting from the G-code file, possibly reduced to accommodate machine velocity and acceleration limits.
+  The value on this pin does not reflect the feed override or any other adjustments.
+* 'motion.teleop-mode' - (bit, out) TRUE when motion is in 'teleop mode', as opposed to 'coordinated mode'
+* 'motion.tooloffset.x ... motion.tooloffset.w' - (float, out, one per axis) shows the tool offset in effect;
+  it could come from the tool table ('G43' active), or it could come from the G-code ('G43.1' active)
 
 === Parameters
 
@@ -191,10 +173,9 @@ change or removal at any time.
 * 'motion.debug-float-3' - (float, RO) This is used for debugging purposes.
 * 'motion.debug-s32-0' - (s32, RO) This is used for debugging purposes.
 * 'motion.debug-s32-1' - (s32, RO) This is used for debugging purposes.
-* 'motion.servo.last-period' - (u32, RO) The number of CPU cycles between invocations of the servo
-  thread. Typically, this number divided by the CPU speed gives the time
-  in seconds, and can be used to determine whether the realtime motion
-  controller is meeting its timing constraints
+* 'motion.servo.last-period' - (u32, RO) The number of CPU cycles between invocations of the servo thread.
+  Typically, this number divided by the CPU speed gives the time in seconds,
+  and can be used to determine whether the realtime motion controller is meeting its timing constraints
 * 'motion.servo.last-period-ns' - (float, RO)
 
 === Functions
@@ -316,7 +297,7 @@ See the motion man page 'motion(9)' for details on the pins and parameters.
 
 == iocontrol
 
-iocontrol - accepts non-realtime I/O commands via NML, interacts with HAL .
+iocontrol - accepts non-realtime I/O commands via NML, interacts with HAL.
 
 iocontrol's HAL pins are turned on and off in non-realtime context.  If you have strict timing requirements or simply need more I/O, consider using the realtime synchronized I/O provided by <<sec:motion,motion>> instead.
 
