--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 linuxcnc (1:2.9.7) bookworm; urgency=low
 
+  * [ci] publish releases with artifacts - GitHub now builds release debs
   * Revert 7d9ee66  to address #3583 - halui functions stop working in 2.9.5/6
   * Merge pull request #3512 from Sigma1912/patch-1
   * Gmoccapy: Fix arrow key up/down bug in tooleditor
