--- a/docs/src/gui/qtvcp-widgets.adoc
+++ b/docs/src/gui/qtvcp-widgets.adoc
@@ -3056,7 +3056,7 @@ It will indicate:
 .Properties
 These properties are available to customize the indicator (not all are applicable to every LED shape):
 
-*`doubleIndicator`*:: with riangle or round LEDs add a second vertical LED.
+*`doubleIndicator`*:: With triangle or round LEDs add a second vertical LED.
 *`on_color`*::
 *`off_color`*::
 *`flashIndicator`*:: When the indicator is true, flash the LED on and off.
