--- a/docs/src/getting-started/about-linuxcnc.adoc
+++ b/docs/src/getting-started/about-linuxcnc.adoc
@@ -64,14 +64,14 @@ Some IRC etiquette::
 * If you're really new to all this, think a bit about your question
   before typing it.  Make sure you give enough information so
   someone can answer your question or solve your problem.
-* Have some patience when waiting for an answer, sometimes it takes a
-  while to formulate an answer or everyone might be busy working or
+* Have some patience when waiting for an answer. Sometimes it takes a
+  while to formulate an answer, or everyone might be busy working or
   something.
 * Set up your IRC account with your unique name so people will know who
   you are.  If you use the java client, use the same name every time you
-  log in.  This helps people remember who you are and if you have been on
-  before many will remember the past discussions which
-  saves time on both ends.
+  log in.  This helps people remember who you are. If you have been on
+  before, many will remember past discussions with you which will
+  save time on both ends.
 
 Sharing Files::
 The most common way to share files on the IRC is to upload the file
@@ -107,7 +107,7 @@ developers then the mailing list is to be preferred.
 A Wiki site is a user maintained web site that anyone can add to or edit.
 
 The user maintained LinuxCNC Wiki site contains a
-wealth of information and tips at https://wiki.linuxcnc.org/.
+wealth of information and tips at http://wiki.linuxcnc.org/.
 
 === Bug Reports
 
