Fixed some typos, removed references to wiki as wiki is obselete and outdated.

--- a/docs/AUTHORS
+++ b/docs/AUTHORS
@@ -13,6 +13,7 @@ Ordered alphabetically by the SF username:
 - jepler        (Jeff Epler)
 - jmelson       (Jon Elson)
 - jmkasunich    (John Kasunich)
+- johnobrien    (John O'Brien)
 - lerman        (Kenneth Lerman)
 - mhaberler     (Michael Haberler)
 - mkuhnle       (Martin Kuhnle)
