--- a/docs/src/getting-started/system-requirements.adoc
+++ b/docs/src/getting-started/system-requirements.adoc
@@ -17,9 +17,6 @@ In addition LinuxCNC needs to be run on an operating system that uses a
 specially modified kernel,
 see <<sec:kernel_and_version_requirements,Kernel and Version Requirements>>.
 
-Additional information is on the LinuxCNC Wiki site:
-https://wiki.linuxcnc.org/cgi-bin/wiki.pl?Hardware_Requirements[Hardware Requirements]
-
 LinuxCNC and Debian Linux should run reasonably well on a computer with
 the following minimum hardware specification. These numbers are not the
 absolute minimum but will give reasonable performance for most stepper
@@ -49,7 +46,7 @@ unlikely to compile your source tree and produce chips at the same time.
 == Kernel and Version requirements
 
 LinuxCNC requires a kernel modified for realtime use to control real machine hardware.
-It can, however run on a standard kernel in simulation mode for purposes
+However, it can run on a standard kernel in simulation mode for purposes
 such as checking G-code, testing config files and learning the system.
 To work with these kernel versions there are two versions of LinuxCNC distributed.
 The package names are "linuxcnc" and "linuxcnc-uspace".
